2003-03-04  John Levon  <levon@movementarian.org>

	* gui/oprof_start.cpp:
	* gui/oprof_start.h:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h:

	* libutil++/string_manip.h:
	* libutil++/string_manip.cpp: add is_prefix(),
	  make the trimmers take an argument

2003-03-04  John Levon  <levon@movementarian.org>

	* gui/oprof_start.cpp:
	* gui/oprof_start.h:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h:
	* gui/persistent_config.h:

	* libutil++/string_manip.h:
	* libutil++/string_manip.cpp: add split(), tobool(), touint()

	* utils/opcontrol: don't write BUF_SIZE twice. Write
	  RTC_VALUE properly. Write KERNEL_ONLY

2003-03-03  John Levon  <levon@movementarian.org>

	* gui/oprof_start.cpp: use --ctrX-event=none,
	  --separate=none. --pid/pgrp-filter=0 was already
	  being done.

2003-03-03  John Levon  <levon@movementarian.org>

	* doc/oprofile.1.in:
	* doc/oprofile.xml:
	* doc/opcontrol: add --ctrX-event=none

2003-03-03  Will Cohen  <wcohen@redhat.com>

	* gui/oprof_start.cpp (oprof_start::on_start_profiler): Limit
	  check to onlyl utm_bitmask.

2003-03-03  Will Cohen  <wcohen@redhat.com>

    * events/ia64.itanium2.events:
    * events/ia64.itanium2.unit_masks: Add Itanium 2 events.

2003-03-03  Will Cohen  <wcohen@redhat.com>

    * libop/op_events.h:
    * libop/op_events.c: Correct checking for the number of unit
      masks.

2003-03-03  John Levon  <levon@movementarian.org>

	* doc/oprofile.1.in:
	* doc/oprofile.xml: another round of cleanups

	* pp/op_merge.cpp: --counter not --use-counter,
	  for consistency

2003-03-03  John Levon  <levon@movementarian.org>

	Patch from Chris Moller, modified.

	* dae/opd_proc.c:
	* dae/opd_sample_files.c:
	* daemon/opd_image.c:
	* daemon/opd_sample_files.c:
	* libabi/abi_test.cpp:
	* libabi/op_import.cpp:
	* libdb/db_hash.h:
	* libdb/db_insert.c:
	* libdb/db_manage.c:
	* libdb/db_test.c:
	* pp/counter_profile.cpp:
	* pp/op_merge.cpp: push asserts in libdb down into
	  the clients.
