@@ -1,5 +1,10 @@
 2003-03-04  John Levon  <levon@movementarian.org>
 
+	* libop/op_events.c: alter the parser to give file/linenr on
+	  error, and handle more whitespace.
+
+2003-03-04  John Levon  <levon@movementarian.org>
+
 	* gui/oprof_start.cpp:
 	* gui/oprof_start.h:
 	* gui/oprof_start_config.cpp:
